# RSTY-R-to-A-

./: README.md
backend/: Cargo.toml
backend/src/: error.rs  main.rs  routes.rs
fronend/: Cargo.toml  Trunk.toml
fronend/src/: api.rs  main.rs  models.rs
fronend/src/components/: mod.rs  task_item.rs
