[package]
name = "fronend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde", "wasmbind"] }
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
yew = { version = "0.21.0", features = ["csr"] }
